--- a/mwc-app/package.json
+++ b/mwc-app/package.json
@@ -28,7 +28,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "expo-checkbox": "~2.7.0",
+    "@react-native-community/netinfo": "11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
