--- a/mwc-app/rust/Cargo.toml
+++ b/mwc-app/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust"
+name = "mwc_wallet_lib"
 version = "0.1.0"
 edition = "2018"
 
@@ -17,7 +17,13 @@ tempfile = "3.10.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 serde_derive = "1"
+jni = "0.21.1"
 
 
 [build-dependencies]
 built = "0.3"
+cbindgen = "0.26.0"
+
+
+[lib]
+crate-type = ["staticlib", "cdylib"]
