--- a/mwc-app/package.json
+++ b/mwc-app/package.json
@@ -10,11 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/react-redux": "^7.1.33",
     "expo": "~50.0.14",
+    "expo-checkbox": "~2.7.0",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -29,12 +31,16 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
-    "expo-checkbox": "~2.7.0",
-    "@react-native-community/netinfo": "11.1.0"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/redux-batched-subscribe": "^0.1.7",
+    "@types/redux-logger": "^3.0.13",
+    "redux-batched-subscribe": "^0.1.6",
     "typescript": "^5.1.3"
   },
   "private": true
