--- a/mwc-app/package.json
+++ b/mwc-app/package.json
@@ -10,6 +10,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-clipboard/clipboard": "^1.13.2",
     "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
@@ -27,13 +29,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
